tests/invalid/runtime/index_get_string_oob.pts
import Io;

function main() : void {
    string s = "ab";
    glyph g = s[2];
    Io.printLine("never");
}
